force-app/main/default/objects/DIR_Case__c/fields/Account_DBA__c.field-meta.xml
<CustomField>
    <fullName>Account_DBA__c</fullName>
    <description>Formula feild to display the DBA of the Business Account on this object. This field is also being used to merge to Conga documents and also to pre-populate on it on the Inspection Questions.</description>
    <formula>Employer__r.DBA__c</formula>
    <label>Account - DBA</label>
    <type>Text</type>
</CustomField>