force-app/main/default/objects/DIR_Case__c/fields/ACL__c.field-meta.xml
<CustomField>
    <fullName>ACL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For VNO clean up only</description>
    <label>ACL</label>
    <type>Checkbox</type>
</CustomField>