force-app/main/default/objects/DIR_Case__c/fields/Active_Bankruptcies__c.field-meta.xml
<CustomField>
    <fullName>Active_Bankruptcies__c</fullName>
    <formula>If( Employer__r.Number_of_Active_Bankruptcies__c  &gt;0, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;,20,20), &quot;&quot;)</formula>
    <label>Active Bankruptcies</label>
    <type>Text</type>
</CustomField>