force-app/main/default/objects/DIR_Case__c/fields/Additional_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Requested__c</fullName>
    <inlineHelpText>Enter additional information to request from the employee/claimaint. This will merge into forms being sent out.</inlineHelpText>
    <label>Additional Information Requested</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>