force-app/main/default/objects/DIR_Case__c/fields/Additional_Plaintiff_From_Amended_Notice__c.field-meta.xml
<CustomField>
    <fullName>Additional_Plaintiff_From_Amended_Notice__c</fullName>
    <description>Additional Plaintiffs from Amended Notice</description>
    <label>Additional Plaintiff From Amended Notice</label>
    <type>TextArea</type>
</CustomField>