force-app/main/default/objects/DIR_Case__c/fields/Adverse_Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Description__c</fullName>
    <inlineHelpText>255 character limit</inlineHelpText>
    <label>Adverse Action Description</label>
    <type>TextArea</type>
</CustomField>