force-app/main/default/objects/DIR_Case__c/fields/Advocate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Phone__c</fullName>
    <label>Advocate Phone</label>
    <type>Phone</type>
</CustomField>