force-app/main/default/objects/DIR_Case__c/fields/Advocate_Street__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Street__c</fullName>
    <label>Advocate Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>