force-app/main/default/objects/DIR_Case__c/fields/Amended_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Amended_Complaint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for WCA 55 output document via Conga Composer; requested by Jan Joy to capture the WCA 55 Type in the output (Complaint v. Amended Complaint)</description>
    <label>Amended Complaint</label>
    <type>Checkbox</type>
</CustomField>