force-app/main/default/objects/DIR_Case__c/fields/Amendent_Placeholder_for_PAGA__c.field-meta.xml
<CustomField>
    <fullName>Amendent_Placeholder_for_PAGA__c</fullName>
    <description>Hidden Field to hold Amendment information</description>
    <inlineHelpText>Hidden Field to hold Amendment information</inlineHelpText>
    <label>Amendent Placeholder for PAGA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>