force-app/main/default/objects/DIR_Case__c/fields/AppealedDate__c.field-meta.xml
<CustomField>
    <fullName>AppealedDate__c</fullName>
    <label>Appealed Date</label>
    <type>Date</type>
</CustomField>