force-app/main/default/objects/DIR_Case__c/fields/Approval_Date_Met__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_Met__c</fullName>
    <formula>IF(
(RecordType.Name=&quot;RCI&quot;) &amp;&amp;
ISPICKVAL(Approval_Status__c,&quot;Approved&quot;) &amp;&amp;
(LC_Approval_Required_By__c &gt;= Approval_Date__c), &quot;Yes&quot;,
IF(
(RecordType.Name=&quot;RCI&quot;) &amp;&amp;
ISPICKVAL(Approval_Status__c,&quot;Approved&quot;) &amp;&amp;
(LC_Approval_Required_By__c &lt; Approval_Date__c), &quot;No&quot;,
null))</formula>
    <label>Approval Date Met</label>
    <type>Text</type>
</CustomField>