force-app/main/default/objects/DIR_Case__c/fields/Assessments_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Assessments_on_Case__c</fullName>
    <description>This is a roll up summary counting all of the assessments that have been issued on this case.</description>
    <inlineHelpText>This is a roll up summary counting all of the assessments that have been issued on this case.</inlineHelpText>
    <label>Assessments on Case</label>
    <summaryForeignKey>Assessments__c.Case_Management__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>