force-app/main/default/objects/DIR_Case__c/fields/Assigned_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Attorney to which this case is assigned for legal referrals</inlineHelpText>
    <label>Assigned DLSE Attorney</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Case Management (Assigned Attorney)</relationshipLabel>
    <relationshipName>Case_Management</relationshipName>
    <type>Lookup</type>
</CustomField>