force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputies_Senior__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputies_Senior__c</fullName>
    <description>The Assigned Deputies Manager (Typically a Senior Deputy)</description>
    <formula>HYPERLINK(&quot;/&quot; + Assigned_Deputy__r.Manager__r.Id,  Assigned_Deputy__r.Manager__r.Name)</formula>
    <inlineHelpText>The Assigned Deputies Manager (Typically a Senior Deputy)</inlineHelpText>
    <label>Assigned Deputy&#39;s Senior</label>
    <type>Text</type>
</CustomField>