force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputy_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Email__c</fullName>
    <description>Used to send emails to assigned deputy about events related to the case. Set by wfr when a case is assigned to a deputy and pushed down to child records where necessary to send emails related to child records only.</description>
    <inlineHelpText>Holds the assigned deputy&#39;s email address for us in emails via wfrs</inlineHelpText>
    <label>Assigned Deputy Email</label>
    <type>Email</type>
</CustomField>