force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputy_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Name__c</fullName>
    <description>Used by Conga to pull Deputy Name from the Internal Employee record related to the Case.</description>
    <formula>Assigned_Deputy__r.Name</formula>
    <label>Assigned Deputy Name</label>
    <type>Text</type>
</CustomField>