force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputy_Title__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Title__c</fullName>
    <description>Used by Conga to pull Title from the Internal Employee record related to the Case.</description>
    <formula>TEXT( Assigned_Deputy__r.Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Deputy Title</label>
    <type>Text</type>
</CustomField>