force-app/main/default/objects/DIR_Case__c/fields/Assigned_Deputy_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_User_ID__c</fullName>
    <formula>Assigned_Deputy__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Deputy User ID</label>
    <type>Text</type>
</CustomField>