force-app/main/default/objects/DIR_Case__c/fields/Assigned_JEU_Clerk__c.field-meta.xml
<CustomField>
    <fullName>Assigned_JEU_Clerk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Internal Employee Object</description>
    <label>Assigned JEU Clerk</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Case Management (Assigned JEU Clerk)</relationshipLabel>
    <relationshipName>Case_Management7</relationshipName>
    <type>Lookup</type>
</CustomField>