force-app/main/default/objects/DIR_Case__c/fields/Assigned_PAGA_Attorney_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PAGA_Attorney_Email__c</fullName>
    <label>Assigned PAGA Attorney Email</label>
    <type>Email</type>
</CustomField>