force-app/main/default/objects/DIR_Case__c/fields/Assigned_Screener_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Screener_Start_Date__c</fullName>
    <description>Start date of the Assigned Screener</description>
    <label>Assigned Screener Start Date</label>
    <type>Date</type>
</CustomField>