force-app/main/default/objects/DIR_Case__c/fields/Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Start_Date__c</fullName>
    <label>Initial Assignment Start Date</label>
    <type>Date</type>
</CustomField>