force-app/main/default/objects/DIR_Case__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Pre-Investigation Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional information</fullName>
            </value>
            <value>
                <fullName>Accept &amp; Assign INV</fullName>
            </value>
            <value>
                <fullName>Admin Closure – No Protected Activity</fullName>
            </value>
            <value>
                <fullName>Admin Closure – No Causal Link</fullName>
            </value>
            <value>
                <fullName>Admin Closure – No employer knowledge</fullName>
            </value>
            <value>
                <fullName>Admin Closure – No Adverse Action</fullName>
            </value>
            <value>
                <fullName>Admin Closure – Untimely</fullName>
            </value>
            <value>
                <fullName>Admin Closure – Insufficient Information</fullName>
            </value>
            <value>
                <fullName>Admin Closure – Other</fullName>
            </value>
            <value>
                <fullName>Admin Closure – Lack of Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Admin Closure – Lack of Jurisdiction – DFEH</fullName>
            </value>
            <value>
                <fullName>Admin Closure – Lack of Jurisdiction – Atty Referral</fullName>
            </value>
            <value>
                <fullName>Admin Closure – Lack of Jurisdiction – Other</fullName>
            </value>
            <value>
                <fullName>Admin Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>