force-app/main/default/objects/DIR_Case__c/fields/Attorney_for_PAGA_Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_for_PAGA_Case_Name__c</fullName>
    <description>First and Last Name of Attorney.</description>
    <formula>Filer_Attorney_for_PAGA_Case__r.FirstName &amp; &#39; &#39; &amp; Filer_Attorney_for_PAGA_Case__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First and Last Name of Attorney.</inlineHelpText>
    <label>Attorney for PAGA Case Name</label>
    <type>Text</type>
</CustomField>