force-app/main/default/objects/DIR_Case__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <description>Bank name</description>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>