force-app/main/default/objects/DIR_Case__c/fields/Basis_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Basis_of_Claim__c</fullName>
    <label>Basis of Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sex</fullName>
            </value>
            <value>
                <fullName>Race/Ethnicity</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>