force-app/main/default/objects/DIR_Case__c/fields/BOFE_Wage_Active__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Wage_Active__c</fullName>
    <label>BOFE/Wage Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>