force-app/main/default/objects/DIR_Case__c/fields/Bond_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bond_Amount__c</fullName>
    <description>Amount of Bond</description>
    <label>Bond Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>