force-app/main/default/objects/DIR_Case__c/fields/Bond_Requested__c.field-meta.xml
<CustomField>
    <fullName>Bond_Requested__c</fullName>
    <description>Picklist if Bond was requested.</description>
    <label>Bond Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>