force-app/main/default/objects/DIR_Case__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <description>Business License</description>
    <label>Business License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>