force-app/main/default/objects/DIR_Case__c/fields/Case_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Case_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Accepted</label>
    <type>Checkbox</type>
</CustomField>