force-app/main/default/objects/DIR_Case__c/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF( 
ISBLANK(Case_Closed_Date__c), 
(TEXT(FLOOR((TODAY() - DATEVALUE(File_Date_Time__c))/365.2425)) &amp; &quot; year(s)&quot;&amp;&quot;, &quot; &amp; 
TEXT(FLOOR(MOD((TODAY() - DATEVALUE(File_Date_Time__c)),365.2425)/30)) &amp; &quot; month(s)&quot;&amp;&quot;, &quot;&amp; 
TEXT(Floor(MOD(Floor(MOD((TODAY() - DATEVALUE(File_Date_Time__c)),365.2425)),30))) &amp; &quot; day(s)&quot;&amp;&quot;; &quot;&amp; &quot;total of &quot;&amp;TEXT(TODAY() - DATEVALUE(File_Date_Time__c))&amp;&quot; day(s)&quot;), 

TEXT(FLOOR((Case_Closed_Date__c - DATEVALUE(File_Date_Time__c))/365.2425)) &amp; &quot; year(s)&quot;&amp;&quot;, &quot; &amp; 
TEXT(FLOOR(MOD((Case_Closed_Date__c - DATEVALUE(File_Date_Time__c)),365.2425)/30)) &amp; &quot; month(s)&quot;&amp;&quot;, &quot;&amp; 
TEXT(Floor(MOD(Floor(MOD((Case_Closed_Date__c - DATEVALUE(File_Date_Time__c)),365.2425)),30))) &amp; &quot; day(s)&quot;&amp;&quot;; &quot;&amp;&quot;total of &quot;&amp;TEXT(Case_Closed_Date__c - DATEVALUE(File_Date_Time__c))&amp;&quot; day(s)&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Closed Date minus File Date. If Case is not closed it is current age.</inlineHelpText>
    <label>Case Age</label>
    <type>Text</type>
</CustomField>