force-app/main/default/objects/DIR_Case__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <description>ERROR: &quot;You have reached the maximum number of 15 object references on Case Management.&quot;
Change Employee F+L Name to Claimant (lookup) once workflow rules are combined into Flow.</description>
    <formula>Employee_First_Name__c+&quot; &quot;+Employee_Last_Name__c+&quot; &quot;+&quot;v.&quot;+&quot; &quot;+Employer_Name_in_Text__c</formula>
    <inlineHelpText>Employee First Name, Employee Last Name, and Employer Name</inlineHelpText>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>