force-app/main/default/objects/DIR_Case__c/fields/Case_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Case_Pathway__c</fullName>
    <inlineHelpText>For Future Use</inlineHelpText>
    <label>Case Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settlement Probable</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>