force-app/main/default/objects/DIR_Case__c/fields/Case_Re_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Re_Open_Date__c</fullName>
    <label>Case Re-Open Date</label>
    <type>Date</type>
</CustomField>