force-app/main/default/objects/DIR_Case__c/fields/Case_Re_Open_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Re_Open_Reason__c</fullName>
    <inlineHelpText>Please explain why you are requesting your case to be re-opened.</inlineHelpText>
    <label>Case Re-Open Reason</label>
    <type>TextArea</type>
</CustomField>